--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
 	<title>CV</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="design.css">
 </head>
 <!-- Commencer CV ici -->
 <body>
-	<h1>Bonjour</h1>
+	<container class="background">
+		<div class="photo"><!-- photo --></div>
+		<div>
+			<h2>CONTACT</h2>
+		</div>
+		<div class="text-fcol">
+			<p>Adresse <br/>Paris, France</p>
+			<p>Téléphone <br/>07 20 35 16 48</p>
+			<p>Email <br/>wullaertbrian@gmail.com</p>
+			<p>Site web <br/>www.siteweb.com</p>
+			<p>Skype <br/>@pgm_alto</p>
+		</div>
+		<div>
+			<h2>A PROPOS DE MOI</h2>
+		</div>
+		<div class="text-fcol">
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</div>
+		<div>
+			<h2>LOISIRS</h2>
+		</div>
+	</container>
+
+
+	<container>
+		
+	</container>
 </body>
 </html>
