--- a/index.html
+++ b/index.html
@@ -4,37 +4,22 @@
 	<title>CV</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="design.css">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 </head>
-<!-- Commencer CV ici -->
 <body>
-	<container class="background">
-		<div class="photo"><!-- photo --></div>
-		<div>
-			<h2>CONTACT</h2>
+	<div class="ensemble">
+		<div class="ensemble_gauche">
+			<div class="ensemble_photo">
+				<img src="picture/photo.png" alt="photo_profil">
+			</div>
+			<div class="ensemble_contenu">
+				<div class="ensemble_item contact">CONTACT</div>
+				<div class="ensemble_item description">A PROPOS DE MOI</div>
+				<div class="ensemble_item loisirs">LOISIRS</div>
+			</div>
 		</div>
-		<div class="text-fcol">
-			<p>Adresse <br/>Paris, France</p>
-			<p>Téléphone <br/>07 20 35 16 48</p>
-			<p>Email <br/>wullaertbrian@gmail.com</p>
-			<p>Site web <br/>www.siteweb.com</p>
-			<p>Skype <br/>@pgm_alto</p>
-		</div>
-		<div>
-			<h2>A PROPOS DE MOI</h2>
-		</div>
-		<div class="text-fcol">
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
-		</div>
-		<div>
-			<h2>LOISIRS</h2>
-		</div>
-	</container>
 
-
-	<container>
-		
-	</container>
+		<div class="ensemble_droit"></div>
+	</div>
 </body>
 </html>
