modifications margin css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="design.css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
 </head>
 <body>
 	<div class="ensemble">
@@ -14,8 +15,31 @@
 			</div>
 			<div class="ensemble_contenu">
 				<div class="ensemble_item contact">CONTACT</div>
+					<ul class="contact_item">
+						<li>
+							<p>Adresse <br/>Paris, France</p>
+						</li>
+						<li>
+							<p>Téléphone <br/>07 52 23 65 41</p>
+						</li>
+						<li>
+							<p>Email <br/>wullaertbrian@gmail.com</p>
+						</li>
+						<li>
+							<p>Site web <br/>www.siteweb.com</p>
+						</li>
+						<li>
+							<p>Skype <br/>@nom_dutilisateur</p>
+						</li>
+					</ul>
 				<div class="ensemble_item description">A PROPOS DE MOI</div>
+					<p class="text_descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				<div class="ensemble_item loisirs">LOISIRS</div>
+				<div class="ensemble_fa">
+					<div><i class="fas fa-dumbbell"></i></div>
+					<div><i class="fas fa-drumstick-bite"></i></div>
+					<div><i class="fas fa-globe-asia"></i></div>
+				</div>
 			</div>
 		</div>
 
