ajout des dernières sections html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,88 @@
 			</div>
 		</div>
 
-		<div class="ensemble_droit"></div>
+		<div class="ensemble_droit">
+			<div class="ensemble_contenu_droit">
+				<div class="ensemble_title">
+					<div><h1>BRIAN WULLAERT</h1></div>
+					<div><h2>Développeur web freelance</h2></div>
+				</div>
+				<h3><i class="fas fa-medal"></i>FORMATION</h3>
+				<div class="divider"></div>
+				<div class="row">
+					<div class="row_date"><i class="far fa-dot-circle"></i>
+						<div>2016/2017 <br/>Paris</div>
+					</div>
+					<div class="row_descript">
+						<h4>OPENCLASSROOMS</h4>
+						<p>Junior Web Developer</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="row_date"><i class="far fa-dot-circle"></i>
+						<div>2016/2017 <br/>Paris</div>
+					</div>
+					<div class="row_descript">
+						<h4>OPENCLASSROOMS</h4>
+						<p>Junior Web Developer</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+					</div>
+				</div>
+
+				<h3 class="marge"><i class="fas fa-medal"></i>EXPERIENCE PROFESSIONELLE</h3>
+				<div class="divider"></div>
+				<div class="row">
+					<div class="row_date"><i class="far fa-dot-circle"></i>
+						<div>2016/2017 <br/>Paris</div>
+					</div>
+					<div class="row_descript">
+						<h4>OPENCLASSROOMS</h4>
+						<p>Junior Web Developer</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="row_date"><i class="far fa-dot-circle"></i>
+						<div>2016/2017 <br/>Paris</div>
+					</div>
+					<div class="row_descript">
+						<h4>OPENCLASSROOMS</h4>
+						<p>Junior Web Developer</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="row_date"><i class="far fa-dot-circle"></i>
+						<div>2016/2017 <br/>Paris</div>
+					</div>
+					<div class="row_descript">
+						<h4>OPENCLASSROOMS</h4>
+						<p>Junior Web Developer</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+					</div>
+				</div>
+
+				<h3 class="marge"><i class="fas fa-medal"></i>RECOMMANDATIONS</h3>
+				<div class="divider"></div>
+				<div class="recom">
+					<div class="recom_text">
+						<b><p>MAXIME KIEMAN</p>
+						<p>Directeur, Mon agence</p>
+						<p>Téléphone: 06 00 00 00 00</p></b>
+						<p>Email: email@gmail.com</p>
+					</div>
+					<div class="recom_text">
+						<b><p>MAXIME KIEMAN</p>
+						<p>Directeur, Mon agence</p>
+						<p>Téléphone: 06 00 00 00 00</p></b>
+						<p>Email: email@gmail.com</p>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
