première version responsive

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 	<div class="ensemble">
 		<div class="ensemble_gauche">
 			<div class="ensemble_photo">
-				<img src="picture/photo.png" alt="photo_profil">
+				<img src="https://i.ibb.co/mSX03tX/photo.png" alt="photo_profil">
 			</div>
 			<div class="ensemble_contenu">
 				<div class="ensemble_item contact">CONTACT</div>
 					<ul class="contact_item">
 						<li>
-							<p>Adresse <br/>Paris, France</p>
+							<p>Adresse <br/>Grenoble, France</p>
 						</li>
 						<li>
 							<p>Téléphone <br/>07 52 23 65 41</p>
@@ -33,7 +33,7 @@
 						</li>
 					</ul>
 				<div class="ensemble_item description">A PROPOS DE MOI</div>
-					<p class="text_descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p class="text_descript">Graphiste de formation, passé par plusieurs années de gendarmerie, j'ai decidé de travailler dans le monde de l'informatique en tant que technicien informatique, me plaisant dans ce domaine mais ayant envie de changer de mission, je me suis tourné vers une formation diplômante dans le développement web. Sportif et passionné de cuisine, ma vie est un agenda bien rempli, je jongle entre mon travail, mes passions et ma famille.</p>
 				<div class="ensemble_item loisirs">LOISIRS</div>
 				<div class="ensemble_fa">
 					<div><i class="fas fa-dumbbell"></i></div>
@@ -46,82 +46,111 @@
 		<div class="ensemble_droit">
 			<div class="ensemble_contenu_droit">
 				<div class="ensemble_title">
-					<div><h1>BRIAN WULLAERT</h1></div>
+					<div><h1><span class="brian">BRIAN</span> WULLAERT</h1></div>
 					<div><h2>Développeur web freelance</h2></div>
+					<div class="dividertitle"></div>
 				</div>
 				<h3><i class="fas fa-medal"></i>FORMATION</h3>
 				<div class="divider"></div>
 				<div class="row">
 					<div class="row_date"><i class="far fa-dot-circle"></i>
-						<div>2016/2017 <br/>Paris</div>
+						<div>2020/2021 <br/>Grenoble</div>
 					</div>
 					<div class="row_descript">
 						<h4>OPENCLASSROOMS</h4>
-						<p>Junior Web Developer</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+						<p>Web Developer BAC+2</p>
+						<p>Formation diplômante en alternance avec l'agence Cerf à Lunettes. 4 jours en entreprise et 1 jour de formation. Apprentissage du HTML, CSS, Bootstrap, Javascript, MySQL, GIT etc.. </p>
 					</div>
 				</div>
 
 				<div class="row">
 					<div class="row_date"><i class="far fa-dot-circle"></i>
-						<div>2016/2017 <br/>Paris</div>
+						<div>2011/2014 <br/>Grenoble</div>
 					</div>
 					<div class="row_descript">
-						<h4>OPENCLASSROOMS</h4>
-						<p>Junior Web Developer</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+						<h4>Lycée André Argouges</h4>
+						<p>Bac Professionnel Communication Visuelle</p>
+						<p>Diplôme enseignant matières générales, histoire de l'art, création print, web et vidéo, Dessin, et tout ce qui touche au graphisme et la communication visuelle.</p>
 					</div>
 				</div>
 
-				<h3 class="marge"><i class="fas fa-medal"></i>EXPERIENCE PROFESSIONELLE</h3>
+				<h3 class="marge"><i class="fas fa-briefcase"></i>EXPERIENCE PROFESSIONELLE</h3>
 				<div class="divider"></div>
 				<div class="row">
 					<div class="row_date"><i class="far fa-dot-circle"></i>
-						<div>2016/2017 <br/>Paris</div>
+						<div>2018/2020 <br/>Grenoble</div>
 					</div>
 					<div class="row_descript">
-						<h4>OPENCLASSROOMS</h4>
-						<p>Junior Web Developer</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+						<h4>ECONOCOM</h4>
+						<p>Technicien Informatique N1 / N2 et référent technique</p>
+						<p>Gestion du parc informatique d'ENGIE NUCLEAIRE et parc mobile, droits de l'active directory, powershell, service technique client.</p>
 					</div>
 				</div>
 
 				<div class="row">
 					<div class="row_date"><i class="far fa-dot-circle"></i>
-						<div>2016/2017 <br/>Paris</div>
+						<div>2018 <br/>Grenoble</div>
 					</div>
 					<div class="row_descript">
-						<h4>OPENCLASSROOMS</h4>
-						<p>Junior Web Developer</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+						<h4>ASSURANCES+</h4>
+						<p>Courtier en assurance</p>
+						<p>Accompagnement du client lors du choix de l'assurance, relations avec les compagnies, création d'outils selon critères du client afin de définir la meilleure offre.</p>
 					</div>
 				</div>
 				<div class="row">
 					<div class="row_date"><i class="far fa-dot-circle"></i>
-						<div>2016/2017 <br/>Paris</div>
+						<div>2015/2018 <br/>Grenoble</div>
 					</div>
 					<div class="row_descript">
-						<h4>OPENCLASSROOMS</h4>
-						<p>Junior Web Developer</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+						<h4>GENDARMERIE</h4>
+						<p>Gendarme</p>
+						<p>Sûreté publique, prévention terrorisme, secours, procédure judiciaire, travail avec le procureur de la république, intervention d'urgence, accompagnement de victimes.</p>
 					</div>
 				</div>
 
-				<h3 class="marge"><i class="fas fa-medal"></i>RECOMMANDATIONS</h3>
+				<h3 class="marge"><i class="fas fa-address-book"></i></i>RECOMMANDATIONS</h3>
 				<div class="divider"></div>
 				<div class="recom">
 					<div class="recom_text">
-						<b><p>MAXIME KIEMAN</p>
-						<p>Directeur, Mon agence</p>
+						<b><p>COMMANDANT DEVILLE</p>
+						<p>Commandant, Compagnie Grenoble</p>
 						<p>Téléphone: 06 00 00 00 00</p></b>
 						<p>Email: email@gmail.com</p>
 					</div>
 					<div class="recom_text">
-						<b><p>MAXIME KIEMAN</p>
-						<p>Directeur, Mon agence</p>
+						<b><p>BRYAN RUET</p>
+						<p>Chef technique ECONOCOM</p>
 						<p>Téléphone: 06 00 00 00 00</p></b>
 						<p>Email: email@gmail.com</p>
 					</div>
+				</div>
+			</div>
+			<div class="ensemble_contenu_deux">
+				<div class="ensemble_item contact">CONTACT</div>
+					<ul class="contact_item">
+						<li>
+							<p>Adresse <br/>Grenoble, France</p>
+						</li>
+						<li>
+							<p>Téléphone <br/>07 52 23 65 41</p>
+						</li>
+						<li>
+							<p>Email <br/>wullaertbrian@gmail.com</p>
+						</li>
+						<li>
+							<p>Site web <br/>www.siteweb.com</p>
+						</li>
+						<li>
+							<p>Skype <br/>@nom_dutilisateur</p>
+						</li>
+					</ul>
+				<div class="ensemble_item description">A PROPOS DE MOI</div>
+					<p class="text_descript">Graphiste de formation, passé par plusieurs années de gendarmerie, j'ai decidé de travailler dans le monde de l'informatique en tant que technicien informatique, me plaisant dans ce domaine mais ayant envie de changer de mission, je me suis tourné vers une formation diplômante dans le développement web. Sportif et passionné de cuisine, ma vie est un agenda bien rempli, je jongle entre mon travail, mes passions et ma famille.</p>
+				<div class="ensemble_item loisirs">LOISIRS</div>
+				<div class="ensemble_fa">
+					<div><i class="fas fa-dumbbell"></i></div>
+					<div><i class="fas fa-drumstick-bite"></i></div>
+					<div><i class="fas fa-globe-asia"></i></div>
 				</div>
 			</div>
 		</div>
