deuxième version du responsive

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<div class="row_descript">
 						<h4>Lycée André Argouges</h4>
 						<p>Bac Professionnel Communication Visuelle</p>
-						<p>Diplôme enseignant matières générales, histoire de l'art, création print, web et vidéo, Dessin, et tout ce qui touche au graphisme et la communication visuelle.</p>
+						<p>Diplôme enseignant matières générales, histoire de l'art, création print, web et vidéo et dessin.</p>
 					</div>
 				</div>
 
@@ -82,14 +82,14 @@
 					</div>
 					<div class="row_descript">
 						<h4>ECONOCOM</h4>
-						<p>Technicien Informatique N1 / N2 et référent technique</p>
+						<p>Technicien Informatique N1 / N2</p>
 						<p>Gestion du parc informatique d'ENGIE NUCLEAIRE et parc mobile, droits de l'active directory, powershell, service technique client.</p>
 					</div>
 				</div>
 
 				<div class="row">
 					<div class="row_date"><i class="far fa-dot-circle"></i>
-						<div>2018 <br/>Grenoble</div>
+						<div>2018/2018 <br/>Grenoble</div>
 					</div>
 					<div class="row_descript">
 						<h4>ASSURANCES+</h4>
@@ -126,7 +126,7 @@
 				</div>
 			</div>
 			<div class="ensemble_contenu_deux">
-				<div class="ensemble_item contact">CONTACT</div>
+				<div class="ensemble_item contact"><h3>CONTACT</h3></div>
 					<ul class="contact_item">
 						<li>
 							<p>Adresse <br/>Grenoble, France</p>
@@ -144,9 +144,9 @@
 							<p>Skype <br/>@nom_dutilisateur</p>
 						</li>
 					</ul>
-				<div class="ensemble_item description">A PROPOS DE MOI</div>
+				<div class="ensemble_item description"><h3>A PROPOS DE MOI</h3></div>
 					<p class="text_descript">Graphiste de formation, passé par plusieurs années de gendarmerie, j'ai decidé de travailler dans le monde de l'informatique en tant que technicien informatique, me plaisant dans ce domaine mais ayant envie de changer de mission, je me suis tourné vers une formation diplômante dans le développement web. Sportif et passionné de cuisine, ma vie est un agenda bien rempli, je jongle entre mon travail, mes passions et ma famille.</p>
-				<div class="ensemble_item loisirs">LOISIRS</div>
+				<div class="ensemble_item loisirs"><h3>LOISIRS</h3></div>
 				<div class="ensemble_fa">
 					<div><i class="fas fa-dumbbell"></i></div>
 					<div><i class="fas fa-drumstick-bite"></i></div>
