--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="design.css">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+
 </head>
 <body>
 	<div class="ensemble">
@@ -47,8 +50,7 @@
 			<div class="ensemble_contenu_droit">
 				<div class="ensemble_title">
 					<div><h1><span class="brian">BRIAN</span> WULLAERT</h1></div>
-					<div><h2>Développeur web freelance</h2></div>
-					<div class="dividertitle"></div>
+					<div><h2><span class="divide">Dével</span>oppeur web freelance</h2></div>
 				</div>
 				<h3><i class="fas fa-medal"></i>FORMATION</h3>
 				<div class="divider"></div>
