--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 	<title>CV</title>
 	<meta charset="utf-8">
@@ -12,10 +12,10 @@
 </head>
 <body>
 	<div class="ensemble">
-		<div class="ensemble_gauche">
-			<div class="ensemble_photo">
+		<section class="ensemble_gauche">
+			<header class="ensemble_photo">
 				<img src="https://i.ibb.co/mSX03tX/photo.png" alt="photo_profil">
-			</div>
+			</header>
 			<div class="ensemble_contenu">
 				<div class="ensemble_item contact">CONTACT</div>
 					<ul class="contact_item">
@@ -44,9 +44,9 @@
 					<div><i class="fas fa-globe-asia"></i></div>
 				</div>
 			</div>
-		</div>
+		</section>
 
-		<div class="ensemble_droit">
+		<section class="ensemble_droit">
 			<div class="ensemble_contenu_droit">
 				<div class="ensemble_title">
 					<div><h1><span class="brian">BRIAN</span> WULLAERT</h1></div>
@@ -64,7 +64,6 @@
 						<p>Formation diplômante en alternance avec l'agence Cerf à Lunettes. 4 jours en entreprise et 1 jour de formation. Apprentissage du HTML, CSS, Bootstrap, Javascript, MySQL, GIT etc.. </p>
 					</div>
 				</div>
-
 				<div class="row">
 					<div class="row_date"><i class="far fa-dot-circle"></i>
 						<div>2011/2014 <br/>Grenoble</div>
@@ -110,19 +109,19 @@
 					</div>
 				</div>
 
-				<h3 class="marge"><i class="fas fa-address-book"></i></i>RECOMMANDATIONS</h3>
+				<h3 class="marge"><i class="fas fa-address-book"></i>RECOMMANDATIONS</h3>
 				<div class="divider"></div>
 				<div class="recom">
 					<div class="recom_text">
-						<b><p>COMMANDANT DEVILLE</p>
-						<p>Commandant, Compagnie Grenoble</p>
-						<p>Téléphone: 06 00 00 00 00</p></b>
+						<b>COMMANDANT DEVILLE </br>
+						Commandant, Compagnie Grenoble</br>
+						Téléphone: 06 00 00 00 00</b>
 						<p>Email: email@gmail.com</p>
 					</div>
 					<div class="recom_text">
-						<b><p>BRYAN RUET</p>
-						<p>Chef technique ECONOCOM</p>
-						<p>Téléphone: 06 00 00 00 00</p></b>
+						<b>BRYAN RUET</br>
+						Chef technique ECONOCOM</br>
+						Téléphone: 06 00 00 00 00</b>
 						<p>Email: email@gmail.com</p>
 					</div>
 				</div>
@@ -149,14 +148,13 @@
 				<div class="ensemble_item description"><h3>A PROPOS DE MOI</h3></div>
 					<p class="text_descript">Graphiste de formation, passé par plusieurs années de gendarmerie, j'ai decidé de travailler dans le monde de l'informatique en tant que technicien informatique, me plaisant dans ce domaine mais ayant envie de changer de mission, je me suis tourné vers une formation diplômante dans le développement web. Sportif et passionné de cuisine, ma vie est un agenda bien rempli, je jongle entre mon travail, mes passions et ma famille.</p>
 				<div class="ensemble_item loisirs"><h3>LOISIRS</h3></div>
-				
-				<div class="ensemble_fa">
+				<footer class="ensemble_fa">
 					<div><i class="fas fa-dumbbell"></i></div>
 					<div><i class="fas fa-drumstick-bite"></i></div>
 					<div><i class="fas fa-globe-asia"></i></div>
-				</div>
+				</footer>
 			</div>
-		</div>
+		</section>
 	</div>
 </body>
 </html>
