--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<p class="text_descript">Graphiste de formation, passé par plusieurs années de gendarmerie, j'ai decidé de travailler dans le monde de l'informatique en tant que technicien informatique, me plaisant dans ce domaine mais ayant envie de changer de mission, je me suis tourné vers une formation diplômante dans le développement web. Sportif et passionné de cuisine, ma vie est un agenda bien rempli, je jongle entre mon travail, mes passions et ma famille.</p>
 				<div class="ensemble_item loisirs">LOISIRS</div>
 				<div class="ensemble_fa">
-					<div><i class="fas fa-dumbbell"></i></div>
+					<div><i class="fas fa-vial"></i></div>
 					<div><i class="fas fa-drumstick-bite"></i></div>
 					<div><i class="fas fa-globe-asia"></i></div>
 				</div>
@@ -149,7 +149,7 @@
 					<p class="text_descript">Graphiste de formation, passé par plusieurs années de gendarmerie, j'ai decidé de travailler dans le monde de l'informatique en tant que technicien informatique, me plaisant dans ce domaine mais ayant envie de changer de mission, je me suis tourné vers une formation diplômante dans le développement web. Sportif et passionné de cuisine, ma vie est un agenda bien rempli, je jongle entre mon travail, mes passions et ma famille.</p>
 				<div class="ensemble_item loisirs"><h3>LOISIRS</h3></div>
 				<footer class="ensemble_fa">
-					<div><i class="fas fa-dumbbell"></i></div>
+					<div><i class="fas fa-vial"></i></div>
 					<div><i class="fas fa-drumstick-bite"></i></div>
 					<div><i class="fas fa-globe-asia"></i></div>
 				</footer>
