--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
 	<div class="ensemble">
-		<section class="ensemble_gauche">
+		<article class="ensemble_gauche">
 			<header class="ensemble_photo">
 				<img src="https://i.ibb.co/mSX03tX/photo.png" alt="photo_profil">
 			</header>
-			<div class="ensemble_contenu">
+			<section class="ensemble_contenu">
 				<div class="ensemble_item contact">CONTACT</div>
 					<ul class="contact_item">
 						<li>
@@ -43,11 +43,11 @@
 					<div><i class="fas fa-drumstick-bite"></i></div>
 					<div><i class="fas fa-globe-asia"></i></div>
 				</div>
-			</div>
-		</section>
+			</section>
+		</article>
 
-		<section class="ensemble_droit">
-			<div class="ensemble_contenu_droit">
+		<article class="ensemble_droit">
+			<section class="ensemble_contenu_droit">
 				<div class="ensemble_title">
 					<div><h1><span class="brian">BRIAN</span> WULLAERT</h1></div>
 					<div><h2><span class="divide">Dével</span>oppeur web freelance</h2></div>
@@ -125,8 +125,8 @@
 						<p>Email: email@gmail.com</p>
 					</div>
 				</div>
-			</div>
-			<div class="ensemble_contenu_deux">
+			</section>
+			<section class="ensemble_contenu_deux">
 				<div class="ensemble_item contact"><h3>CONTACT</h3></div>
 					<ul class="contact_item">
 						<li>
@@ -153,8 +153,8 @@
 					<div><i class="fas fa-drumstick-bite"></i></div>
 					<div><i class="fas fa-globe-asia"></i></div>
 				</footer>
-			</div>
-		</section>
+			</section>
+		</article>
 	</div>
 </body>
 </html>
