--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<img src="https://i.ibb.co/mSX03tX/photo.png" alt="photo_profil">
 			</header>
 			<section class="ensemble_contenu">
-				<div class="ensemble_item contact">CONTACT</div>
+				<h2 class="ensemble_item contact">CONTACT</h2>
 					<ul class="contact_item">
 						<li>
 							<p>Adresse <br/>Grenoble, France</p>
@@ -35,9 +35,9 @@
 							<p>Skype <br/>@nom_dutilisateur</p>
 						</li>
 					</ul>
-				<div class="ensemble_item description">A PROPOS DE MOI</div>
+				<h2 class="ensemble_item description">A PROPOS DE MOI</h2>
 					<p class="text_descript">Graphiste de formation, passé par plusieurs années de gendarmerie, j'ai decidé de travailler dans le monde de l'informatique en tant que technicien informatique, me plaisant dans ce domaine mais ayant envie de changer de mission, je me suis tourné vers une formation diplômante dans le développement web. Sportif et passionné de cuisine, ma vie est un agenda bien rempli, je jongle entre mon travail, mes passions et ma famille.</p>
-				<div class="ensemble_item loisirs">LOISIRS</div>
+				<h2 class="ensemble_item loisirs">LOISIRS</h2>
 				<div class="ensemble_fa">
 					<div><i class="fas fa-vial"></i></div>
 					<div><i class="fas fa-drumstick-bite"></i></div>
@@ -49,7 +49,7 @@
 		<article class="ensemble_droit">
 			<section class="ensemble_contenu_droit">
 				<div class="ensemble_title">
-					<div><h1><span class="brian">BRIAN</span> WULLAERT</h1></div>
+					<h1><span class="brian">BRIAN</span> WULLAERT</h1>
 					<div><h2><span class="divide">Dével</span>oppeur web freelance</h2></div>
 				</div>
 				<h3><i class="fas fa-medal"></i>FORMATION</h3>
@@ -113,14 +113,14 @@
 				<div class="divider"></div>
 				<div class="recom">
 					<div class="recom_text">
-						<b>COMMANDANT DEVILLE </br>
-						Commandant, Compagnie Grenoble</br>
+						<b>COMMANDANT DEVILLE <br>
+						Commandant, Compagnie Grenoble<br>
 						Téléphone: 06 00 00 00 00</b>
 						<p>Email: email@gmail.com</p>
 					</div>
 					<div class="recom_text">
-						<b>BRYAN RUET</br>
-						Chef technique ECONOCOM</br>
+						<b>BRYAN RUET<br>
+						Chef technique ECONOCOM<br>
 						Téléphone: 06 00 00 00 00</b>
 						<p>Email: email@gmail.com</p>
 					</div>
