--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<div class="ensemble">
-		<article class="ensemble_gauche">
+		<main class="ensemble_gauche">
 			<header class="ensemble_photo">
 				<img src="https://i.ibb.co/mSX03tX/photo.png" alt="photo_profil">
 			</header>
@@ -44,9 +44,9 @@
 					<div><i class="fas fa-globe-asia"></i></div>
 				</div>
 			</section>
-		</article>
+		</main>
 
-		<article class="ensemble_droit">
+		<main class="ensemble_droit">
 			<section class="ensemble_contenu_droit">
 				<div class="ensemble_title">
 					<h1><span class="brian">BRIAN</span> WULLAERT</h1>
@@ -154,7 +154,7 @@
 					<div><i class="fas fa-globe-asia"></i></div>
 				</footer>
 			</section>
-		</article>
+		</main>
 	</div>
 </body>
 </html>
