--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</section>
 		</main>
 
-		<main class="ensemble_droit">
+		<article class="ensemble_droit">
 			<section class="ensemble_contenu_droit">
 				<div class="ensemble_title">
 					<h1><span class="brian">BRIAN</span> WULLAERT</h1>
@@ -154,7 +154,7 @@
 					<div><i class="fas fa-globe-asia"></i></div>
 				</footer>
 			</section>
-		</main>
+		</article>
 	</div>
 </body>
 </html>
